Basics for redux-based rendering

--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -1,4 +1,4 @@
-#room .messages {
+#room .messages-wrapper {
   border: 1px solid #EEE;
   box-shadow: 1px 1px 4px rgba(0,0,0,0.3);
   height: 60vh;
