basics in creating character
* added RoomCharactersStore.
* added UI to create character.
* added room activity for creating character.

--- a/assets/src/scss/app.scss
+++ b/assets/src/scss/app.scss
@@ -3,4 +3,5 @@
 @import "containers/nav";
 @import "containers/room";
 @import "containers/rooms";
+@import "containers/modal";
 @import "containers/notice";
