--- a/src/scss/containers/_notice.scss
+++ b/src/scss/containers/_notice.scss
@@ -1,8 +1,8 @@
 #notice{
-    border-style: solid;
-    border-width: 1px;
     padding-top:1em;
     padding-bottom: 1em;
     margin-bottom: 1em;
-    width: 50%;
+    width: 100%;
+    margin-left: auto;
+    margin-right: auto;
 }
