--- a/src/scss/containers/_room.scss
+++ b/src/scss/containers/_room.scss
@@ -1,4 +1,12 @@
 #room {
+  .area-header{
+    color: white;
+    background-color: rgba(214, 64, 64, 1);
+    padding-left: 1em;
+    padding-top: 0.5em;
+    padding-bottom: 0.5em;
+  }
+
   .messages-wrapper {
     position: relative;
     border: 1px solid #EEE;
@@ -8,7 +16,7 @@
     margin: 0 0 10px;
     transition: all 0.6s;
     overflow-y: hidden;
-    background-color: rgba(0, 0, 0, 0.05);
+    background-color: rgba(255, 255, 255, 1);
 
     &:hover {
       box-shadow: 1px 1px 16px rgba(0,0,0,0.5);
@@ -29,7 +37,7 @@
         padding: 0.5em;
         flex: initial;
         width: 100px;
-        background-color: rgba(0, 0, 0, 0.1);
+        font-weight: bold;
       }
       .message {
         padding: 0.5em;
@@ -44,6 +52,30 @@
         .message {
           background-color: rgba(255, 255, 255, 1);
         }
+      }
+    }
+  }
+
+  .room-form{
+    margin-top: 1em;
+    margin-bottom: 1em;
+
+    .textarea-wrapper{
+      position: relative;
+      border: 2px solid #DDDDDD;
+      border-top: 0;
+
+      textarea{
+        width: 90%;
+        height: 100px;
+        border: 0;
+        resize: none;
+        margin-right: 1em;
+      }
+      button{
+        position: absolute;
+        right: 10px;
+        top:45%;
       }
     }
   }
