added a button to open the character interface

--- a/assets/src/scss/containers/_room.scss
+++ b/assets/src/scss/containers/_room.scss
@@ -72,7 +72,7 @@
         resize: none;
         margin-right: 1em;
       }
-      button{
+      .actions{
         position: absolute;
         right: 10px;
         top:45%;
