--- a/assets/src/scss/app.scss
+++ b/assets/src/scss/app.scss
@@ -1,4 +1,5 @@
 @charset "UTF-8";
+@import '~bootstrap/scss/bootstrap';
 @import "global/base";
 @import "containers/nav";
 @import "containers/room";
