Improve rooms style and move area header to base.scss

--- a/assets/src/scss/containers/_rooms.scss
+++ b/assets/src/scss/containers/_rooms.scss
@@ -2,12 +2,16 @@
   .create-button{
     text-align: right;
   }
+
+  .rooms-wrapper{
+    margin-top: 1em;
+  }
+  
   ul.rooms {
     display: block;
     list-style-type: none;
     padding: 0.3em;
     border: 2px solid #DDDDDD;
-    margin-top: 1em;
     li {
       display: flex;
       border-bottom: 1px solid #DDDDDD;
