--- a/assets/src/scss/global/_base.scss
+++ b/assets/src/scss/global/_base.scss
@@ -26,3 +26,11 @@ main {
 .btn, button {
   cursor: pointer;
 }
+
+.area-header{
+  color: white;
+  background-color: rgba(214, 64, 64, 1);
+  padding-left: 1em;
+  padding-top: 0.5em;
+  padding-bottom: 0.5em;
+}
